==> midibox/mios32/trunk/mios32/LPC17xx/mios32_iic.c <==
#include <mios32.h>
#define I2C_PERIPHERAL_FRQ (MIOS32_SYS_CPU_FREQUENCY/4)

s32 MIOS32_IIC_Init(u32 mode)
{
  int i;

  // currently only mode 0 supported
  if( mode != 0 )
    return -1; // unsupported mode

  for(i=0; i<MIOS32_IIC_NUM; ++i) {
    // configure I2C peripheral
    MIOS32_IIC_InitPeripheral(i);

    // now accessible for other tasks
    iic_rec[i].iic_semaphore = 0;
    iic_rec[i].last_transfer_error = 0;
  }


  /* Install interrupt handlers */
  MIOS32_IRQ_Install(I2C0_IRQn, MIOS32_IRQ_IIC_EV_PRIORITY);
#if MIOS32_IIC_NUM >= 2
  MIOS32_IRQ_Install(I2C1_IRQn, MIOS32_IRQ_IIC_EV_PRIORITY);
#endif
#if MIOS32_IIC_NUM >= 3
  MIOS32_IRQ_Install(I2C2_IRQn, MIOS32_IRQ_IIC_EV_PRIORITY);
#endif

  return 0; // no error
}

static void MIOS32_IIC_InitPeripheral(u8 iic_port)
{
  iic_rec_t *iicx = &iic_rec[iic_port];// simplify addressing of record
  u32 frq_clocks;

  switch( iic_port ) {
    case 0:
      // define base address
      iicx->base = LPC_I2C0;

      // frequency
      frq_clocks = I2C_PERIPHERAL_FRQ / (MIOS32_IIC0_BUS_FREQUENCY);

      // init pins
      MIOS32_SYS_LPC_PINSEL (0, 27, 1); // SDA: P0.27 (function 1)
      MIOS32_SYS_LPC_PINSEL (0, 28, 1); // SCK: P0.28 (function 1)
      break;

#if MIOS32_IIC_NUM >= 2
    case 1:
      // define base address
      iicx->base = LPC_I2C1;

      // frequency
      frq_clocks = I2C_PERIPHERAL_FRQ / (MIOS32_IIC1_BUS_FREQUENCY);

      // init pins
      MIOS32_SYS_LPC_PINSEL(0, 19, 3); // SDA: P0.19 (function 3)
      MIOS32_SYS_LPC_PINSEL(0, 20, 3); // SCK: P0.20 (function 3)
      break;
#endif

#if MIOS32_IIC_NUM >= 3
    case 2:
      // define base address
      iicx->base = LPC_I2C2;

      // frequency
      frq_clocks = I2C_PERIPHERAL_FRQ / (MIOS32_IIC2_BUS_FREQUENCY);

      // init pins
      MIOS32_SYS_LPC_PINSEL(0, 10, 2); // SDA: P0.10 (function 2)
      MIOS32_SYS_LPC_PINSEL(0, 11, 2); // SCK: P0.11 (function 2)
      break;
#endif

    default:
      return;
  }

  // clear flags
  iicx->base->I2CONCLR = 0x6c; // I2EN, STA, SIC, AAC

  // init clock
  u32 clk_l = frq_clocks / 2;
  u32 clk_h = frq_clocks-clk_l; // consider rounding error...
  iicx->base->I2SCLL = clk_l;
  iicx->base->I2SCLH = clk_h;

  // clear transfer state and error value
  iicx->transfer_state.ALL = 0;
  iicx->transfer_error = 0;

  // enable peripheral
  iicx->base->I2CONSET = 0x40; // I2EN
}

s32 MIOS32_IIC_Transfer(u8 iic_port, mios32_iic_transfer_t transfer, u8 address, u8 *buffer, u16 len)
{
  iic_rec_t *iicx = &iic_rec[iic_port];// simplify addressing of record
  s32 error;

  if( iic_port >= MIOS32_IIC_NUM )
    return MIOS32_IIC_ERROR_INVALID_PORT;

  // wait until previous transfer finished
  if( (error = MIOS32_IIC_TransferWait(iic_port)) ) { // transmission error during previous transfer
    iicx->iic_semaphore = 0; // release semaphore for easier programming at user level
    return error + MIOS32_IIC_ERROR_PREV_OFFSET;
  }

  // disable interrupts
  MIOS32_IRQ_Disable(); // TODO: disable peripheral

  // clear transfer state and error value
  iicx->transfer_state.ALL = 0;
  iicx->transfer_error = 0;

  // set buffer length and start index
  iicx->buffer_len = len;
  iicx->buffer_ix = 0;

  // branch depending on read/write
  if( transfer == IIC_Read || transfer == IIC_Read_AbortIfFirstByteIs0 ) {
    // take new address/buffer/len
    iicx->iic_address = address | 1; // set bit 0 for read operation
    iicx->tx_buffer_ptr = NULL; // ensure that previous TX buffer won't be accessed
    iicx->rx_buffer_ptr = buffer;
    // special option for optimized MBHP_IIC_MIDI
    iicx->transfer_state.ABORT_IF_FIRST_BYTE_0 = transfer == IIC_Read_AbortIfFirstByteIs0 ? 1 : 0;
  } else if( transfer == IIC_Write || transfer == IIC_Write_WithoutStop ) {
    // take new address/buffer/len
    iicx->iic_address = address & 0xfe; // clear bit 0 for write operation
    iicx->tx_buffer_ptr = buffer;
    iicx->rx_buffer_ptr = NULL; // ensure that nothing will be received
    // option to skip stop-condition generation after successful write
    iicx->transfer_state.WRITE_WITHOUT_STOP = transfer == IIC_Write_WithoutStop ? 1 : 0;
  } else {
    iicx->iic_semaphore = 0; // release semaphore for easier programming at user level
    MIOS32_IRQ_Enable(); // TODO: enable peripheral??
    return (iicx->last_transfer_error=MIOS32_IIC_ERROR_UNSUPPORTED_TRANSFER_TYPE);
  }

  // clear last error status
  iicx->last_transfer_error = 0;

  // notify that transfer has started
  iicx->transfer_state.BUSY = 1;

  MIOS32_IRQ_Enable(); // TODO: enable peripheral

  // send start condition
  iicx->base->I2CONCLR = 0x04; // clear AA (assert acknowledge) bit
  iicx->base->I2CONSET = 0x20; // set STA (start) bit

  return 0; // no error
}
